--- a/lab8-9/FireBase/build.gradle
+++ b/lab8-9/FireBase/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:3.1.1'
     }
 }
 
@@ -23,7 +23,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         mavenCentral()
-        maven { url 'https://maven.google.com' }
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
 
