change all activity

--- a/lab8-9/FireBase/app/src/main/AndroidManifest.xml
+++ b/lab8-9/FireBase/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.SignUpActivity" />
         <activity android:name=".Activities.AdminActivity" />
-        <activity android:name=".Activities.DetailActivity"></activity>
+        <activity android:name=".Activities.EditProfileActivity"></activity>
     </application>
 
 </manifest>
